# RAG

./: .gitignore  Dockerfile  Makefile  README.md  UI_REDESIGN_PLAN.md  _test_file.py  config.yaml  dev.py  docker-compose.yml  poll_sync.py  pyproject.toml  requirements.txt  run_sync_test.py
.zcode/plans/: plan-sess_21041d20-3b6e-4ada-b000-87b548a19505.md
api/: auth.py  deps.py  errors.py  filters.py  middleware.py  pagination.py  server.py
api/routers/: admin.py  agent.py  chat.py  collections.py  documents.py  health.py  jobs.py  legacy.py  papers.py  reindex.py  search.py  sessions.py  web.py
api/schemas/: chat.py  collections.py  common.py  documents.py  jobs.py  papers.py
connectors/: base.py
connectors/arxiv/: __init__.py  reader.py
connectors/confluence/: __init__.py  reader.py
connectors/documents/: __init__.py  reader.py
connectors/github/: commits.py  files.py  importance.py  preview.py
connectors/openalex/: __init__.py  reader.py
core/: cache.py  chunker.py  config.py  contextual_rag.py  embedder.py  hierarchy.py  hybrid_search.py  index_backend_factory.py  indexer.py  interfaces.py  knowledge_graph.py  lancedb_backend.py  llm.py  logging.py  pipeline.py  reranker.py  resilience.py  sync_state.py  uploads.py  vector_store.py
core/agents/: __init__.py  (+2 more)
services/: collection_service.py  dead_letter.py  document_service.py  ingest_service.py  job_service.py  paper_service.py  search_service.py  web_search_service.py
tests/: test_connector_inputs.py  test_documents_single_file.py  test_hierarchy.py  test_knowledge_graph.py  test_live_connectors.py  test_smoke.py
ui/: app.js  index.html  styles.css
(+22 files in other folders)
