[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-hub"
version = "2.0.0"
description = "Production-grade RAG platform with hybrid search and AI chat"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "lancedb>=0.13.0",
    "sentence-transformers>=3.2.1",
    "einops>=0.8.0",
    "tiktoken>=0.8.0",
    "PyGithub>=2.4.0",
    "GitPython>=3.1.43",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
    "python-multipart>=0.0.12",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "youtube-transcript-api>=0.6.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "bandit>=1.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "api", "services"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
show_missing = true
